Added more tests for more code coverage and added jacoco in xml.